{
  "version": 4,
  "terraform_version": "1.15.5",
  "serial": 18,
  "lineage": "36059665-d30d-c070-0d00-75953164f93a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:111650207499:instance/i-0d7e570ffdb4155bd",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d7e570ffdb4155bd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pubg-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0774becfa3e351c41"
              }
            ],
            "primary_network_interface_id": "eni-0774becfa3e351c41",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-100-58-154-118.compute-1.amazonaws.com",
            "public_ip": "100.58.154.118",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-008dd5c4ff6d17584",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e6d4bf9e8a761dc",
            "tags": {
              "Name": "ansible"
            },
            "tags_all": {
              "Name": "ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050ce212499dd0dc9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "i-0d7e570ffdb4155bd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.purna-sg-1",
            "aws_subnet.public",
            "aws_vpc.public"
          ]
        },
        {
          "index_key": "jenkins",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:111650207499:instance/i-0f7c55e4f17622d59",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f7c55e4f17622d59",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pubg-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0797155d029c6155d"
              }
            ],
            "primary_network_interface_id": "eni-0797155d029c6155d",
            "private_dns": "ip-10-0-1-131.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.131",
            "public_dns": "ec2-44-201-64-13.compute-1.amazonaws.com",
            "public_ip": "44.201.64.13",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0479b1cf7952e2b6a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e6d4bf9e8a761dc",
            "tags": {
              "Name": "jenkins"
            },
            "tags_all": {
              "Name": "jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050ce212499dd0dc9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "i-0f7c55e4f17622d59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.purna-sg-1",
            "aws_subnet.public",
            "aws_vpc.public"
          ]
        },
        {
          "index_key": "tomcat",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:111650207499:instance/i-075e4b7f03941284a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075e4b7f03941284a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "pubg-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f67e1cbedbab536c"
              }
            ],
            "primary_network_interface_id": "eni-0f67e1cbedbab536c",
            "private_dns": "ip-10-0-1-100.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.100",
            "public_dns": "ec2-3-239-64-12.compute-1.amazonaws.com",
            "public_ip": "3.239.64.12",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c447db336859ae2c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e6d4bf9e8a761dc",
            "tags": {
              "Name": "tomcat"
            },
            "tags_all": {
              "Name": "tomcat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-050ce212499dd0dc9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "i-075e4b7f03941284a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.purna-sg-1",
            "aws_subnet.public",
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111650207499:internet-gateway/igw-03f7d64e23642a52a",
            "id": "igw-03f7d64e23642a52a",
            "owner_id": "111650207499",
            "region": "us-east-1",
            "tags": {
              "Name": "gateway"
            },
            "tags_all": {
              "Name": "gateway"
            },
            "vpc_id": "vpc-0a5360da089843d2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "igw-03f7d64e23642a52a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111650207499:route-table/rtb-0585b1e15172b1d9a",
            "id": "rtb-0585b1e15172b1d9a",
            "owner_id": "111650207499",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03f7d64e23642a52a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5360da089843d2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "rtb-0585b1e15172b1d9a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0080a9563c9834383",
            "region": "us-east-1",
            "route_table_id": "rtb-0585b1e15172b1d9a",
            "subnet_id": "subnet-08e6d4bf9e8a761dc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "rtbassoc-0080a9563c9834383",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.rt",
            "aws_subnet.public",
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "purna-sg-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111650207499:security-group/sg-050ce212499dd0dc9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050ce212499dd0dc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8888,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8888
              }
            ],
            "name": "purna-sg",
            "name_prefix": "",
            "owner_id": "111650207499",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a5360da089843d2f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "sg-050ce212499dd0dc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111650207499:subnet/subnet-08e6d4bf9e8a761dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08e6d4bf9e8a761dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111650207499",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": " subnet-1"
            },
            "tags_all": {
              "Name": " subnet-1"
            },
            "vpc_id": "vpc-0a5360da089843d2f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "subnet-08e6d4bf9e8a761dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:111650207499:vpc/vpc-0a5360da089843d2f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0309cf7806975a1d7",
            "default_route_table_id": "rtb-0ec4a2ca3c95de0e0",
            "default_security_group_id": "sg-0acb48b47a3442a4d",
            "dhcp_options_id": "dopt-0e87bf7c149aec6d3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a5360da089843d2f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ec4a2ca3c95de0e0",
            "owner_id": "111650207499",
            "region": "us-east-1",
            "tags": {
              "Name": "public-vpc"
            },
            "tags_all": {
              "Name": "public-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "111650207499",
            "id": "vpc-0a5360da089843d2f",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}